# transcribot

./: Cargo.toml  README.md
src/: main.rs  telegram.rs  utils.rs
src/transcribe/: ffmpeg.rs  mod.rs  process.rs  whisper.rs
