[package]
name = "transcribot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.6"
color-eyre = "0.6.2"
console-subscriber = "0.1.10"
lazy_static = "1.4.0"
teloxide = { version = "0.12", features = ["macros"] }
tempfile = "3.8.0"
tokio = { version =  "1.8", features = ["full", "tracing"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "env-filter"] }
